k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      automountServiceAccountToken: false
      containers:
        - name: redis
          image: redis/redis-stack:latest
          volumeMounts:
            - name: database
              mountPath: /data
          ports:
            - containerPort: 6379
          readinessProbe:
            tcpSocket:
              port: 6379
          resources:
            limits:
              cpu: 1.0
              memory: 1G
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: redis-data
---
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctf-server
spec:
  selector:
    matchLabels:
      app: ctf-server
  replicas: 1
  template:
    metadata:
      labels:
        app: ctf-server
    spec:
      serviceAccountName: ctf-server
      securityContext:
        runAsNonRoot: true
      containers:
      - name: orchestrator
        image: ghcr.io/es3n1n/paradigmctf.py:latest
        # Workers = num_threads + 1
        command: ["uvicorn", "--host", "0.0.0.0", "--port", "7283", "ctf_server.orchestrator:app", "--workers", "3"]
        ports:
        - containerPort: 7283
        readinessProbe:
          tcpSocket:
            port: 7283
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
        resources:
          limits:
            cpu: 1.0
            memory: 1G
---
apiVersion: v1
kind: Service
metadata:
  name: orchestrator
spec:
  selector:
    app: ctf-server
  # Make sure to never expose this port publicly in production!
  ports:
    - protocol: TCP
      port: 7283
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anvil-proxy
spec:
  selector:
    matchLabels:
      app: anvil-proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: anvil-proxy
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
      containers:
      - name: anvil-proxy
        image: ghcr.io/es3n1n/paradigmctf.py:latest
        # Workers = num_threads + 1
        command: ["uvicorn", "--host", "0.0.0.0", "--port", "8545", "--workers", "3", "ctf_server.anvil_proxy:app"]
        ports:
        - containerPort: 8545
        readinessProbe:
          tcpSocket:
            port: 8545
        imagePullPolicy: IfNotPresent
        securityContext:
          allowPrivilegeEscalation: false
        resources:
          limits:
            cpu: 1.0
            memory: 2G
---
apiVersion: v1
kind: Service
metadata:
  name: anvil-proxy
spec:
  selector:
    app: anvil-proxy
  # You might want to put this behind a reverse proxy like Nginx or Caddy in production
  ports:
    - protocol: TCP
      port: 8545
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: anvil-egress-restrict
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: anvil
  policyTypes:
  - Egress
  egress:
  # Allow DNS to CoreDNS
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  # Allow everything outside the cluster
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        # NOTE: You might want to adjust these exceptions to your cluster setup
        - 10.0.0.0/8
        - 10.96.0.0/12
        - 172.16.0.0/12
        - 192.168.0.0/16
